# pactum

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DESIGN.md  PROGRESS.md  README.md  STACK.md
migrations/: env.py
migrations/versions/: 41b5ea924013_create_incidents_table.py  565c8114e4f5_create_lineage_edges_table.py  b1d31f13ac50_make_incident_signature_unique.py  f822946a2735_create_contracts_table.py
pactum/: __init__.py  llm.py  models.py  profiler.py  settings.py
pactum/agents/: contract_generator.py  state.py
pactum/lineage/: graph.py
pactum/monitoring/: incident_store.py
pactum/monitoring/adherence/: completeness_sla.py  freshness_sla.py  range_enum.py  referential_integrity.py  regex.py  schema.py  uniqueness.py  violation.py
pactum/monitoring/drift/: chi_squared.py  freshness.py  ks.py  protocol.py  psi.py  registry.py
pactum/orchestration/: definitions.py
pactum/registry/: contract_registry.py
pactum/sources/: business_context.py  duckdb_adapter.py  postgres_adapter.py  protocol.py  registry.py
pactum/tools/: __init__.py  classify_semantics.py  profile_columns.py  understand_source.py
tests/: test_placeholder.py
tests/integration/: test_contract_registry.py  test_incident_store.py
tests/unit/: test_chi_squared.py  test_classify_semantics.py  test_completeness_sla.py  test_contract_generator.py  test_drift_registry.py  test_freshness.py  test_freshness_sla.py  test_incident_store.py  test_ks.py  test_orchestration.py  test_profile_columns.py  test_psi.py  test_range_enum.py  test_referential_integrity.py  test_regex_check.py  test_schema_check.py  test_understand_source.py  test_uniqueness.py
