[project]
name = "pactum"
version = "0.0.1"
description = "Living data contracts that explain themselves"
requires-python = ">=3.11"
dependencies = [
    "langchain-groq>=1.1.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.14",
    "psycopg[binary]>=3.3.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
