[project]
name = "pactum"
version = "0.0.1"
description = "Living data contracts that explain themselves"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "dagster>=1.13.15",
    "duckdb>=1.5.4",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.9",
    "networkx>=3.6.1",
    "numpy<2",
    "pandas<3",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.0",
    "pydantic-settings>=2.14.2",
    "scipy>=1.17.1",
    "whylogs>=1.6.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.14",
    "pandas-stubs>=3.0.3.260530",
    "types-networkx>=3.6.1.20260624",
    "scipy-stubs>=1.17.1.5",
    "dagster-webserver>=1.13.15",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "whylogs.*"
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
